# comfyg-prompt

./: .gitignore  README.md  __init__.py  comfyg_prompt.py  pyproject.toml
.github/workflows/: publish.yml
js/: comfy_prompt.js  comfyg_prompt.js
